[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "eventlet>=0.40.4",
    "flask>=3.1.2",
    "flask-socketio>=5.6.0",
    "gevent-websocket>=0.10.1",
    "numpy>=2.4.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "web3>=7.14.0",
]
